# WEB-IMAGE-CLASSIFIER

./: .env  .gitignore  Dockerfile  LICENSE  README.md  cifar_model.ipynb  docker-compose.yml  pyproject.toml  requirements.txt
src/model/: cifar_model.ipynb
src/web_image_classifier/: db.sqlite3  manage.py
src/web_image_classifier/main_app/: forms.py  model_data.py  models.py  urls.py  utils.py  views.py
src/web_image_classifier/main_app/migrations/: 0001_initial.py
src/web_image_classifier/main_app/static/js/main/: results_dialog.js  upload_dialog.js  upload_image.js
src/web_image_classifier/main_app/static/main_app/: footer.css  header.css  main.css  upload_dialog.css
src/web_image_classifier/main_app/static/main_app/css/: footer.css  header.css  main.css  model_dialog.css
src/web_image_classifier/main_app/static/main_app/js/: model_dialog.js
src/web_image_classifier/main_app/static/main_app/txt/: model_100_summary.txt
src/web_image_classifier/main_app/static/particles/: app.js
src/web_image_classifier/main_app/templates/main_app/: base.html  footer.html  header.html  index.html  information.html  main.html  model_dialog.html  results.html  statistic.html  upload_dialog.html
src/web_image_classifier/main_app/tf_models/: __init__.py  cifar_10.keras  cifar_10_cat_edition.h5  cifar_10_final.h5  models_info.py
src/web_image_classifier/web_image_classifier/: asgi.py  settings.py  urls.py  wsgi.py
