[tool.poetry]
name = "web-image-classifier"
version = "0.1.0"
description = ""
authors = ["Yaroslav Melnychuk <yarmel.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"
python-dotenv = "^1.0.1"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
