[tool.poetry]
name = "web-image-classifier"
version = "0.1.0"
description = ""
authors = ["Yaroslav Melnychuk <yarmel.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
django = "^5.0.2"
numpy = "^1.26.4"
pillow = "^10.2.0"
python-dotenv = "^1.0.1"
keras = "^3.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
keras = ">=2.9.0rc0,<2.10.0"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.9.3"
